GNOME Bugzilla – Bug 730690
ServiceProxy leaks CallbackData when freed with notifies still added.
Last modified: 2014-05-24 16:12:43 UTC
Don't leak CallbackData
Created attachment 277117 [details] [review] Don't leak CallbackData If a ServiceProxy was unref'ed with notifies still added, callback data would be leaked. Signed-off-by: Jens Georg <mail@jensge.org>
Attachment 277117 [details] pushed as c186160 - Don't leak CallbackData