Don't leak CallbackData

If a ServiceProxy was unref'ed with notifies still added, callback data
would be leaked.

Signed-off-by: Jens Georg <mail@jensge.org>

https://bugzilla.gnome.org/show_bug.cgi?id=730690